--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="Web site created using create-react-app"
     />
     
-    <title>Netflix</title>
+    <title>ChillFlix</title>
   </head>
   <body>
     <div id="root"></div>
